[package]
name = "rfbutton"
version = "0.1.0"
edition = "2021"
description = "A library for decoding 433 MHz RF remote codes."
license = "MIT OR Apache-2.0"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
repository = "https://github.com/qwandor/rfbutton/"
keywords = ["rf", "433mhz"]
categories = ["hardware-support", "parser-implementations"]

[dependencies]
thiserror = "1.0.30"

[dev-dependencies]
cc1101 = { path = "../cc1101" }
color-backtrace = "0.6.1"
color-eyre = "0.6.2"
eyre = "0.6.9"
linux-embedded-hal = "0.3.2"
log = "0.4.20"
pretty_env_logger = "0.5.0"
rppal = { version = "0.15.0", features = ["embedded-hal"] }
