[package]
name = "rfbutton"
version = "0.1.1"
edition = "2021"
description = "A library for decoding 433 MHz RF remote codes."
license = "MIT OR Apache-2.0"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
repository = "https://github.com/qwandor/rfbutton/"
keywords = ["rf", "433mhz"]
categories = ["hardware-support", "parser-implementations"]

[dependencies]
thiserror = "1.0.30"
serde = { version = "1.0.197", optional = true }

[dev-dependencies]
cc1101 = { version = "0.1.3", features = ["std"] }
color-backtrace = "0.6.1"
color-eyre = "0.6.2"
embedded-hal-bus = { version = "0.2.0", features = ["std"] }
eyre = "0.6.9"
log = "0.4.20"
pretty_env_logger = "0.5.0"
rppal = { version = "0.18.0", features = ["hal"] }
serde_test = "1.0.176"

[features]
default = ["serde"]
serde = ["dep:serde"]
